<resources>
    <string name="app_name">androidPlayer</string>
    <string name="title_media">Media</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_search">Search</string>
    <string name="start">Start</string>
    <string name="stop">Stop</string>
    <string name="resume">Resume</string>
    <string name="add">add</string>
    <string name="next">next</string>
    <string name="previous">previous</string>
    <string name="repeat">repeat</string>
    <string name="album">album</string>
    <string name="image">image</string>
    <string name="test">test</string>
    <string name="artist">Artist</string>
    <string name="title">Title</string>
    <string name="sound">sound</string>
    <string name="close">close</string>
    <string name="time_to">-00:00</string>
    <string name="time_left">00:00</string>
    <string name="shuffle">Shuffle</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
