<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                             xmlns:tools="http://schemas.android.com/tools"
                                             xmlns:app="http://schemas.android.com/apk/res-auto"
                                             android:layout_width="match_parent"
                                             android:layout_height="70dp">

    <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@color/MusicGrey"
            android:id="@+id/player_border"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">
    </View>

    <Button
            android:text="@string/test"
            android:layout_width="300dp"
            android:layout_height="70dp"
            android:id="@+id/clickable" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:alpha="0"
            app:layout_constraintBottom_toBottomOf="parent"/>

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="16dp"
            android:gravity="center"
            android:text="@string/title"
            android:id="@+id/title_min"
            android:layout_marginEnd="20dp" app:layout_constraintEnd_toStartOf="@+id/play_min"
            android:layout_marginStart="80dp" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>
    <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp" app:srcCompat="@drawable/ic_action_play"
            android:id="@+id/play_min"
            app:layout_constraintEnd_toStartOf="@+id/next_min"
            android:layout_marginEnd="16dp" android:contentDescription="@string/start"
            android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="parent" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent"/>
    <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp" app:srcCompat="@drawable/ic_action_next"
            android:id="@+id/next_min"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="20dp"
            android:contentDescription="@string/next" android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent"/>

</android.support.constraint.ConstraintLayout>